ex4/testdata/typechecker/error/IntTest-err.java
class IntTest {
	public static void main(String[] a){
            int x;
            x = true; // TE
	}
}

